--- a/src/Pages/assets/StyleSheet/Asider.css
+++ b/src/Pages/assets/StyleSheet/Asider.css
@@ -1,5 +1,20 @@
+#asider-wrapper{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    height: 90%;
+    justify-content: space-between;
+    text-align: center;
+}
 @media only screen and (max-width:800px) {
     #connectedDev {
         font-size: 13px
+    }
+    #args{
+        width: 50px;
+    }
+    .btnji{
+        padding: 0px;
+        font-size: small;
     }
 }
